
{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 25,
  "lineage": "710af684-9207-9ded-ab92-9fd71e1130d7",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09ec3598bd507d54d",
            "arn": "arn:aws:ec2:us-east-1:172316546414:elastic-ip/eipalloc-09ec3598bd507d54d",
            "association_id": "eipassoc-01dab85d45bc38638",
            "domain": "vpc",
            "id": "eipalloc-09ec3598bd507d54d",
            "network_border_group": "us-east-1",
            "network_interface": "eni-00918b1405b60ee4d",
            "private_dns": "ip-172-53-4-159.ec2.internal",
            "private_ip": "172.53.4.159",
            "public_dns": "ec2-13-223-134-209.compute-1.amazonaws.com",
            "public_ip": "13.223.134.209",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "uat-nat-eip-0"
            },
            "tags_all": {
              "Name": "uat-nat-eip-0"
            }
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04534e29208e3c5f4",
            "arn": "arn:aws:ec2:us-east-1:172316546414:elastic-ip/eipalloc-04534e29208e3c5f4",
            "association_id": "eipassoc-0375bf495acea08df",
            "domain": "vpc",
            "id": "eipalloc-04534e29208e3c5f4",
            "network_border_group": "us-east-1",
            "network_interface": "eni-08bd3d96130e592b1",
            "private_dns": "ip-172-53-5-192.ec2.internal",
            "private_ip": "172.53.5.192",
            "public_dns": "ec2-98-83-63-62.compute-1.amazonaws.com",
            "public_ip": "98.83.63.62",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "uat-nat-eip-1"
            },
            "tags_all": {
              "Name": "uat-nat-eip-1"
            }
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b1d621b58c52b5a5",
            "arn": "arn:aws:ec2:us-east-1:172316546414:elastic-ip/eipalloc-0b1d621b58c52b5a5",
            "association_id": "eipassoc-090f7f0252f2b8146",
            "domain": "vpc",
            "id": "eipalloc-0b1d621b58c52b5a5",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0cc288d6732a3247d",
            "private_dns": "ip-172-53-6-68.ec2.internal",
            "private_ip": "172.53.6.68",
            "public_dns": "ec2-52-87-255-178.compute-1.amazonaws.com",
            "public_ip": "52.87.255.178",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "uat-nat-eip-2"
            },
            "tags_all": {
              "Name": "uat-nat-eip-2"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:172316546414:internet-gateway/igw-0ece5e1f71e6b39bc",
            "id": "igw-0ece5e1f71e6b39bc",
            "owner_id": "172316546414",
            "region": "us-east-1",
            "tags": {
              "Name": "uat-igw"
            },
            "tags_all": {
              "Name": "uat-igw"
            },
            "vpc_id": "vpc-0aa5c09b458db2f00"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09ec3598bd507d54d",
            "association_id": "eipassoc-01dab85d45bc38638",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0fc30fc4ece6ef606",
            "network_interface_id": "eni-00918b1405b60ee4d",
            "private_ip": "172.53.4.159",
            "public_ip": "13.223.134.209",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0afd775b925bac569",
            "tags": {
              "Name": "uat-nat-gw-0"
            },
            "tags_all": {
              "Name": "uat-nat-gw-0"
            },
            "vpc_id": "vpc-0aa5c09b458db2f00"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04534e29208e3c5f4",
            "association_id": "eipassoc-0375bf495acea08df",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0a824c7bd8cb55b84",
            "network_interface_id": "eni-08bd3d96130e592b1",
            "private_ip": "172.53.5.192",
            "public_ip": "98.83.63.62",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0561df9cf8af529e6",
            "tags": {
              "Name": "uat-nat-gw-1"
            },
            "tags_all": {
              "Name": "uat-nat-gw-1"
            },
            "vpc_id": "vpc-0aa5c09b458db2f00"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b1d621b58c52b5a5",
            "association_id": "eipassoc-090f7f0252f2b8146",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-084f45815b1f5e2ae",
            "network_interface_id": "eni-0cc288d6732a3247d",
            "private_ip": "172.53.6.68",
            "public_ip": "52.87.255.178",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a9f0d349161dde6a",
            "tags": {
              "Name": "uat-nat-gw-2"
            },
            "tags_all": {
              "Name": "uat-nat-gw-2"
            },
            "vpc_id": "vpc-0aa5c09b458db2f00"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:172316546414:route-table/rtb-022034d518a574ca3",
            "id": "rtb-022034d518a574ca3",
            "owner_id": "172316546414",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fc30fc4ece6ef606",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "uat-private-rt-0"
            },
            "tags_all": {
              "Name": "uat-private-rt-0"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aa5c09b458db2f00"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "172316546414",
            "id": "rtb-022034d518a574ca3",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:172316546414:route-table/rtb-03ef079286168d203",
            "id": "rtb-03ef079286168d203",
            "owner_id": "172316546414",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a824c7bd8cb55b84",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "uat-private-rt-1"
            },
            "tags_all": {
              "Name": "uat-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aa5c09b458db2f00"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "172316546414",
            "id": "rtb-03ef079286168d203",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:172316546414:route-table/rtb-0d495f8a73ecf3d5e",
            "id": "rtb-0d495f8a73ecf3d5e",
            "owner_id": "172316546414",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-084f45815b1f5e2ae",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "uat-private-rt-2"
            },
            "tags_all": {
              "Name": "uat-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aa5c09b458db2f00"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "172316546414",
            "id": "rtb-0d495f8a73ecf3d5e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:172316546414:route-table/rtb-0dc4419d2103d796a",
            "id": "rtb-0dc4419d2103d796a",
            "owner_id": "172316546414",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ece5e1f71e6b39bc",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "uat-public-rt"
            },
            "tags_all": {
              "Name": "uat-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aa5c09b458db2f00"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "172316546414",
            "id": "rtb-0dc4419d2103d796a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01fc79d14b6557769",
            "region": "us-east-1",
            "route_table_id": "rtb-022034d518a574ca3",
            "subnet_id": "subnet-0ec6209e7749d67be"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0df19ee19186c1f3d",
            "region": "us-east-1",
            "route_table_id": "rtb-03ef079286168d203",
            "subnet_id": "subnet-07349a05c6743920c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-099e27623dbd5e68a",
            "region": "us-east-1",
            "route_table_id": "rtb-0d495f8a73ecf3d5e",
            "subnet_id": "subnet-0511897a3b6c1a053"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0709f7ceafaf93fdb",
            "region": "us-east-1",
            "route_table_id": "rtb-0dc4419d2103d796a",
            "subnet_id": "subnet-0afd775b925bac569"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0082da9536ba10b5a",
            "region": "us-east-1",
            "route_table_id": "rtb-0dc4419d2103d796a",
            "subnet_id": "subnet-0561df9cf8af529e6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05423d307c128c2a6",
            "region": "us-east-1",
            "route_table_id": "rtb-0dc4419d2103d796a",
            "subnet_id": "subnet-0a9f0d349161dde6a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:172316546414:subnet/subnet-0ec6209e7749d67be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.53.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ec6209e7749d67be",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "172316546414",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "uat-private-subnet-0"
            },
            "tags_all": {
              "Name": "uat-private-subnet-0"
            },
            "vpc_id": "vpc-0aa5c09b458db2f00"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "172316546414",
            "id": "subnet-0ec6209e7749d67be",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:172316546414:subnet/subnet-07349a05c6743920c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.53.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07349a05c6743920c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "172316546414",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "uat-private-subnet-1"
            },
            "tags_all": {
              "Name": "uat-private-subnet-1"
            },
            "vpc_id": "vpc-0aa5c09b458db2f00"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "172316546414",
            "id": "subnet-07349a05c6743920c",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:172316546414:subnet/subnet-0511897a3b6c1a053",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.53.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0511897a3b6c1a053",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "172316546414",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "uat-private-subnet-2"
            },
            "tags_all": {
              "Name": "uat-private-subnet-2"
            },
            "vpc_id": "vpc-0aa5c09b458db2f00"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "172316546414",
            "id": "subnet-0511897a3b6c1a053",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:172316546414:subnet/subnet-0afd775b925bac569",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.53.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0afd775b925bac569",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "172316546414",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "uat-public-subnet-0"
            },
            "tags_all": {
              "Name": "uat-public-subnet-0"
            },
            "vpc_id": "vpc-0aa5c09b458db2f00"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "172316546414",
            "id": "subnet-0afd775b925bac569",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:172316546414:subnet/subnet-0561df9cf8af529e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.53.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0561df9cf8af529e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "172316546414",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "uat-public-subnet-1"
            },
            "tags_all": {
              "Name": "uat-public-subnet-1"
            },
            "vpc_id": "vpc-0aa5c09b458db2f00"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "172316546414",
            "id": "subnet-0561df9cf8af529e6",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:172316546414:subnet/subnet-0a9f0d349161dde6a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.53.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a9f0d349161dde6a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "172316546414",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "uat-public-subnet-2"
            },
            "tags_all": {
              "Name": "uat-public-subnet-2"
            },
            "vpc_id": "vpc-0aa5c09b458db2f00"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "172316546414",
            "id": "subnet-0a9f0d349161dde6a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:172316546414:vpc/vpc-0aa5c09b458db2f00",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.53.0.0/16",
            "default_network_acl_id": "acl-0474ddfec2273c64f",
            "default_route_table_id": "rtb-0d104f020b08b73fe",
            "default_security_group_id": "sg-0a64ddfeba4b6f9b4",
            "dhcp_options_id": "dopt-0490f2f678e81a1ee",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0aa5c09b458db2f00",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d104f020b08b73fe",
            "owner_id": "172316546414",
            "region": "us-east-1",
            "tags": {
              "Name": "uat-vpc"
            },
            "tags_all": {
              "Name": "uat-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "172316546414",
            "id": "vpc-0aa5c09b458db2f00",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}